--- a/templates/print.html
+++ b/templates/print.html
@@ -3,6 +3,6 @@
   <div style="width:400px;margin-left:auto;margin-right:auto;padding:30px 0 30px 0;">
     <h1>How's my driving?</h1>
     <p>Leave me feedback at <strong>http://www.admonymous.com/{{ user.username }}</strong></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud kjhkjexercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p><img src="https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl={{ user.encoded_url }}"/></p>
   </div>
 {% endblock %}
