Added crash course in anonymous admonition and admiration

--- a/templates/user.html
+++ b/templates/user.html
@@ -30,7 +30,7 @@
       </div>
     {% else %}
       <div class="alert-message block-message info">
-        Constructively admonish {{ target_user.name }}:
+	If you haven't yet, please take a minute to go through <a href="/crash_course?giving">some suggestions</a> for giving admonition. You might also want to read some suggestions for <a href="/crash_course?anonymity">maintaining anonymity</a>. Then, constructively admonish {{ target_user.name }}:
       </div>
     {% endif %}
 
