some updates to crash course

--- a/templates/crash_course.html
+++ b/templates/crash_course.html
@@ -35,9 +35,9 @@ return false;
   <li>Be gentle. As long as you get the message through, there is no need to be harsh. How you express an admonition can be almost as important as the content. Be mindful of wording, and use softer forms over more harsh alternatives (for example, consider using “could” instead of “should”). Good: "Sometimes you smell of sweat. Perhaps you could shower more often." Bad: "You stink!"</li>
   <li>Be specific. Provide as many details as you can without exposing yourself. Not only is this going to help the recipient identify exactly the problematic aspects of their behavior, it will also encourage them to take you seriously. Good: “When you arrange meetings, sometimes they are ineffective because you don’t stop people when they go off-topic.” Bad: “Your meetings are wasting people’s time.”</li>
   <li>Be concrete. If you can point out specific actions, it will be easier for the recipient to figure out how to change their behavior. Good: "Please clean up more thoroughly after you use the espresso machine." Bad: "Be more clean."</li>
-<li> Don't abuse. It's easy to be mean when anonymity protects you. Remember that the goal is helping your friends, not making them feel miserable.</li>
+  <li>Don't abuse. It's easy to be mean when anonymity protects you. Remember that the goal is helping your friends, not making them feel miserable.</li>
   <li>Sandwich. People will find it much easier to address your admonitions if you surround them by admirations. Good: "I love your social nature in the office, but sometimes you speak very loudly, and it makes it hard for other people to work." Bad: "You talk loudly in the office all day long."</li>
-  <li>Exercise discretion. You're not here to organize the world's information: there may be things that people don't know and they're better off not knowing. Think before you click. For example: "She told me just before she got on the plane that she never really loved you."</li>
+  <li>Exercise discretion. You're not here to organize the world's information: there may be things that people don't know and they're better off not knowing. Remember the recipient is not perfect and their self-esteem is at stake along with their behavior. Try to avoid admonitions that are likely to generate more harm than good, and think before you click. For example: "She told me just before she got on the plane that she never really loved you."</li>
   <li>Be aware of your power. Place yourself in the recipient’s shoes and imagine how you would feel if you were the one to receive the admonition that you just wrote.</li>
 </ul>
 
@@ -105,7 +105,7 @@ See our suggestions for successfully maintaining anonymity.
 <p>
 <b>I don’t want people to tell me things anonymously!</b>
 <br/>
-That’s fine. If you like, you can still use our site to give admonition to others, or just amuse yourself reading our suggestions.
+That’s fine. If you like, you can still use our site to give admonition to others, or just amuse yourself reading our suggestions. If you want face-to-face admonition, simply ask for it. That's not what Admonymous is for.
 </p>
 
 <p>
