--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,17 @@
   });
 </script>
 
+{% include "topmenu.html" %}
+
 {% if not user %}
-  <div style="width:560px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;text-align:center;">
-    <img src="/static/images/admonymous.png" style="padding-bottom:50px;"/>
-    <a href="{{ login_url }}" class="btn nodecorate">Log in with your Google account</a>
+<h1>Admonymous</h1>
+
+<h2>Anonymous Admonition and Admiration</h2>
+
+  <!-- <div style="width:560px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;text-align:left;"> -->
+    <!-- <img src="/static/images/admonymous.png" style="padding-bottom:50px;"/> -->
+    <div style="width:600px; padding:40px 0 30px 0;">
+    <a href="/login" class="btn nodecorate">Log in with your Google account</a>
     <div style="clear:both;">
       
     </div>
@@ -41,20 +48,7 @@
     
   </div>
 {% else %}
-  {% if user.username %}
-    <div style="height:78px;padding:19px 32px 0 22px;">
-      <div style="float:left;">
-        <h2>{{ user.name }} ({{ user.username }})</h2>
-        <a href="/">My admonitions</a> | <a href="/{{ user.username }}">My public page</a> | <a href="/print" target="_new">Print an announcement</a> | <a href="/crash_course" target="_new">A crash course in anonymous admonition and admiration</a> | <a href="{{ logout_url }}">Log out</a>
-      </div>
-
-      <div style="float:right;text-align:right;">
-        <img src="/static/images/admonymous_small.png" width="137" height="68"/>
-      </div>
-    </div>
-
-    <hr/>
-
+    {% if user.username %}
     <div style="padding:0 22px;">
       
       <div class="alert-message block-message info">
@@ -131,19 +125,6 @@
     </form>
     
   {% else %}
-  
-    <div style="height:78px;padding:19px 32px 0 22px;">
-      <div style="float:left;">
-        <h2>Admonymous</h2>
-        <a href="{{ logout_url }}">Log out</a>
-      </div>
-
-      <div style="float:right;text-align:right;">
-        <img src="/static/images/admonymous_small.png" width="137" height="68"/>
-      </div>
-    </div>
-
-    <hr/>
   
     <div style="width:200px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;">
       <form action="/" method="post" accept-charset="utf-8" class="form-stacked">
