--- a/templates/user.html
+++ b/templates/user.html
@@ -1,25 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div style="height:78px;padding:19px 32px 0 22px;">
-  <div style="float:left;">
-    {% if user.username %}
-    <h2>{{ user.name }} ({{ user.username }})</h2>
-    <a href="/">My admonitions</a> | <a href="/{{ user.username }}">My public page</a> | <a href="/print" target="_new">Print an announcement</a> | <a href="{{ logout_url }}">Log out</a>
-    {% else %}
-    <h2>Admonymous</h2>
-    <a href="/">Home</a> | <a href="{{ login_url }}">Log in</a>
-    {% endif %}
-  </div>
-
-  <div style="float:right;text-align:right;">
-    <img src="/static/images/admonymous_small.png" width="137" height="68"/>
-  </div>
-</div>
-
-<hr/>
-
-
+{% include "topmenu.html" %}
 
 <div style="padding:19px 32px 0 22px;">
   {% if target_user %}
