--- a/templates/home.html
+++ b/templates/home.html
@@ -72,7 +72,7 @@
       {% else %}
         <h1>Welcome!</h1>
         <div class="alert-message block-message info">
-          You don't have any admonitions yet. To get some action, you can <a href="/print" target="_new">print out</a> a special little poster and post it up on your office door or wherever your friends will see it. If you are really hardcore, you can put your URL on a T-shirt! Your URL is:<br/>
+          You don't have any admonitions yet. To get some action, you can <a href="/print" target="_new">print out</a> a special poster and post it up on your office door or wherever your friends will see it. If you are really hardcore, you can put your URL on a T-shirt! Your URL is:<br/>
           <pre style="margin:10px 0;"><a href="http://www.admonymous.com/{{ user.username }}">http://www.admonymous.com/{{ user.username }}</a></pre>
           You can also ask for feedback on the internet: <a target="twitter" href="http://twitter.com/home?status=Soliciting constructive admonitions: http://www.admonymous.com/{{ user.username }}">Solicit constructive admonitions via Twitter</a>
         </div>
