--- a/templates/home.html
+++ b/templates/home.html
@@ -20,12 +20,12 @@
 {% include "topmenu.html" %}
 
 {% if not user %}
-<h1>Admonymous</h1>
-
-<h2>Anonymous Admonition and Admiration</h2>
+<!-- <h1>Admonymous</h1> -->
 
   <!-- <div style="width:560px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;text-align:left;"> -->
-    <!-- <img src="/static/images/admonymous.png" style="padding-bottom:50px;"/> -->
+    <img src="/static/images/Admonymous_logo.png"/>
+    <center><h1>Anonymous Admonition and Admiration</h1></center>
+
     <div style="width:600px; padding:40px 0 30px 0;">
     <a href="/login" class="btn nodecorate">Log in with your Google account</a>
     <div style="clear:both;">
