--- a/templates/topmenu.html
+++ b/templates/topmenu.html
@@ -12,7 +12,8 @@
   </div>
   
   <div style="float:right;text-align:right;">
-    <img src="/static/images/admonymous_small.png" width="137" height="68"/>
+    <!-- <img src="/static/images/admonymous_small.png" width="137" height="68"/> -->
+    <img src="/static/images/Admonymous_logo.png" width="360" height="50"/>
   </div>
 </div>
 
