--- a/templates/_email/base.html
+++ b/templates/_email/base.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 {% spaceless %}
-<body style="background-color: #f2f1e6;">
+<body>
   <table align="center" style="font-size: 12px;" cellpadding="0" cellspacing="0">
 
     <tr id="header">
