--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,14 @@
     <title>Admonymous: Anonymous Admonition and Admiration.</title>
     <script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/bootstrap.css" type="text/css" media="screen" charset="utf-8"/>
     <link rel="stylesheet" href="/static/styles.css" type="text/css" media="screen" charset="utf-8"/>
   </head>
   <body>
     <div id="wrapper">
+      {% block top_menu %}
+        {% include "topmenu.html" %}
+      {% endblock %}
       {% block content %}
       {% endblock %}      
     </div>
