--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,15 +2,16 @@
 
 {% block content %}
 
-{% include "topmenu.html" %}
-
-<div style="width:600px;">
+<div style="width:500px;margin: 30px auto 0 auto;">
 
 <h1>Contact information</h1>
 
-<p>Admonymous was conceived and created by <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="http://www.admonymous.com/nevin">anonymously admonish and admire</a>) and <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="http://www.admonymous.com/yoni">anonymously admonish and admire</a>).</p>
+<p>Admonymous was conceived and created by:<br/><br/>
+  <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="http://www.admonymous.com/yoni">anonymously admonish and admire</a>) and <br/>
+  <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="http://www.admonymous.com/nevin">anonymously admonish and admire</a>).
+</p>
 
-<p>Please share any admonition or admiration you may have for <a href="http://www.admonymous.com/admonymous">Admonymous</a> itself!</p> 
+<p>Leave feedback by <a href="http://www.admonymous.com/admonymous">leaving an admonition or admiration for Admonymous itself!</a></p> 
 
 </div>
 
