--- a/templates/home.html
+++ b/templates/home.html
@@ -30,12 +30,13 @@
   <div style="padding:40px 0 30px 0;text-align:left;width:980px;margin-left:auto;margin-right:auto;">
     
     <img src="/static/images/Admonymous_logo.png" width="983" height="150" style="margin-left:auto;margin-right:auto;"/>
-    <div class="well" style="font-weight:bold;font-size:25px;line-height:30px;color:#999;margin-top:20px;">
+    
+    <div id="signup-bar" class="well">
       <a href="/login" class="btn nodecorate primary float-right large">Log in with your Google account</a>
       This website lets you leave anonymous admonition and admiration for your friends and coworkers. 
     </div>
     
-    <div style="font-weight:bold;color:00438a;font-size:20px;">
+    <div id="example-admonitions">
       <div class="span5">
         &ldquo;The sound you make when you enjoy your food is adorable, but probably not working for you during business lunches.&rdquo;
       </div>
@@ -47,10 +48,10 @@
       </div>
     </div>
     
-    <div style="clear:both;height:25px;"></div>
+    <div style="clear:both;height:45px;"></div>
     <hr/>
     
-    <div style="padding:0px 20px 20px 20px;clear:both;">
+    <div id="definition">
       <h3><strong>Admonition</strong> (plural admonitions): Gentle or friendly reproof; counseling against fault or oversight; warning.</h3>
       <br/>
 
@@ -72,9 +73,6 @@
     {% if user.username %}
     <div style="padding:0 22px;">
       
-      <div class="alert-message block-message info" style="text-align:center;">
-	If you don't feel right at home receiving direct admonition, please take a minute to read <a href="/crash_course?receiving" target="_new">some suggestions</a>.
-      </div>
       {% if responses %}
         {% for response in responses %}
           <div class="response">
@@ -89,6 +87,9 @@
             </div>
           </div>
         {% endfor %}
+        <div class="alert-message block-message info" style="text-align:center;">
+  	If you don't feel right at home receiving direct admonition, please take a minute to read <a href="/crash_course?receiving" target="_new">some suggestions</a>.
+        </div>
       {% else %}
         <h1>Welcome!</h1>
         <div class="alert-message block-message info">
@@ -124,7 +125,7 @@
     <input type="submit" class="btn danger" name="submit" value="Delete user account" id="delete-account" style="float:right;margin:23px 20px 0 0;"/>
     
   	<form action="/" method="post" accept-charset="utf-8" class="form-stacked">
-  	  <strong>Update your info:</strong>
+  	  <strong>Update your note to visitors and/or user info:</strong>
   	  <fieldset>
   	    {% if username_taken %}
   	    <br/>
@@ -138,6 +139,7 @@
           Updated! Make sure to tell your friends when you change your username.
         </div>
         {% endif %}
+        <textarea name="message" style="width:502px;height:75px;margin:0 0 4px 0;">{{ user.message|default_if_none:"" }}</textarea><br/>
         <input name="name" value="{{ user.name }}" style="height:29px;"/>
         <input name="username" value="{{ user.username }}" style="height:29px;"/>
         <input type="submit" class="btn secondary" name="submit" value="Change" id="submit"/>
@@ -145,20 +147,23 @@
     </form>
     
   {% else %}
-  
-    <div style="width:200px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;">
+    
+    <div style="width:502px;margin-left:auto;margin-right:auto;padding:40px 0 30px 0;">
       <form action="/" method="post" accept-charset="utf-8" class="form-stacked">
+    	  {# <strong>Update your public message and user info:</strong> #}
     	  <fieldset>
     	    {% if username_taken %}
     	    <br/>
-          <div class="alert-message error">
+          <div class="alert-message error" style="width:469px;">
             Sorry, the username <strong>{{ username_taken }}</strong> is not available.
           </div>
           {% endif %}
           <label for="name">Your full name</label>
-          <input name="name" value="{{ user.name|default_if_none:"" }}" style="height:29px;"/>
+          <input name="name" value="{{ user.name|default_if_none:"" }}" style="height:29px;"/><br/>
           <label for="username">Pick a username</label>
           <input name="username" value="{{ user.username|default_if_none:"" }}" style="height:29px;"/><br/><br/>
+          <label for="message">Write a brief note to visitors to your feedback page (optional):</label>
+          <textarea name="message" style="width:502px;height:75px;margin:0 0 4px 0;">{{ user.message|default_if_none:"" }}</textarea><br/><br/>
           <input type="submit" class="btn secondary" name="submit" value="Begin" id="submit" style="float:right;"/>
     	  </fieldset>
       </form>
