--- a/templates/user.html
+++ b/templates/user.html
@@ -9,13 +9,20 @@
         Admonition successfully submitted!
       </div>
     {% else %}
-      <div class="well" style="font-weight:bold;font-size:25px;line-height:30px;color:#999;">
+      <div class="well" id="user-message">
+        {% if target_user.message %}
+        {{ target_user.message_html }}
+        <div id="sig">
+          &mdash; {{ target_user.name }}
+        </div>
+        {% else %}
         {% if not user %}
-          <div style="width:41%;float:right;font-size:15px;">
-            This website lets you leave anonymous admonition and admiration for your friends and coworkers. If you would like a page of your own, <a href="/login" class="nodecorate">log in with your Google account</a>.
-          </div>
-        {% endif %}
+         <div id="user-page-welcome">
+           This website lets you leave anonymous admonition and admiration for your friends and coworkers. If you would like a page of your own, <a href="/login" class="nodecorate">log in with your Google account</a>.
+         </div>
+         {% endif %}
         Constructively admonish {{ target_user.name }}:
+        {% endif %}
         <div style="clear:both;"></div>
       </div>
     {% endif %}
