--- a/static/styles.css
+++ b/static/styles.css
@@ -20,7 +20,7 @@ ul li span { color: #202020; }
 th1 {
 }
 div#example-admonitions {
-	color:00438a;
+	color:#00438a;
 	font: 20px Georgia, "Times New Roman", Times, serif;
 	line-height: 29px;
 }
