--- a/templates/home.html
+++ b/templates/home.html
@@ -162,7 +162,7 @@
           <input name="name" value="{{ user.name|default_if_none:"" }}" style="height:29px;"/><br/>
           <label for="username">Pick a username</label>
           <input name="username" value="{{ user.username|default_if_none:"" }}" style="height:29px;"/><br/><br/>
-          <label for="message">Write a brief note to visitors to your feedback page (optional):</label>
+          <label for="message">Write a brief note to people about what kind of feedback you want (optional):</label>
           <textarea name="message" style="width:502px;height:75px;margin:0 0 4px 0;">{{ user.message|default_if_none:"" }}</textarea><br/><br/>
           <input type="submit" class="btn secondary" name="submit" value="Begin" id="submit" style="float:right;"/>
     	  </fieldset>
