--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,7 @@
     </div>
     
     <div style="text-align:center;padding:0 0 50px 0;">
-      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="/login">Log in</a>
+      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/login">Log in</a>
     </div>
     
   </div>
