--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,9 @@
 
 <h1>Contact information</h1>
 
-<p>Admonymous was conceived and created by:<br/><br/>
+<p>Admonymous is maintained by <a href="mailto:eloise.rosen@gmail.com">Eloise Rosen</a>.</p>
+
+<p>Admonymous was originally conceived and created by:<br/><br/>
   <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="http://www.admonymous.com/yoni">anonymously admonish and admire</a>) and <br/>
   <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="http://www.admonymous.com/nevin">anonymously admonish and admire</a>).
 </p>
