login work around + update contact info

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,14 +6,16 @@
 
 <h1>Contact information</h1>
 
-<p>Admonymous is maintained by <a href="mailto:eloise.rosen@gmail.com">Eloise Rosen</a>.</p>
+<p>Admonymous is maintained by <a href="mailto:eloise.rosen@gmail.com">Eloise Rosen</a> 
+	(<a href="http://www.admonymous.com/eloise">anonymously admonish and admire</a>).
+</p>
 
 <p>Admonymous was originally conceived and created by:<br/><br/>
   <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="http://www.admonymous.com/yoni">anonymously admonish and admire</a>) and <br/>
   <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="http://www.admonymous.com/nevin">anonymously admonish and admire</a>).
 </p>
 
-<p>Leave feedback by <a href="http://www.admonymous.com/admonymous">leaving an admonition or admiration for Admonymous itself!</a></p> 
+<p>Leave feedback by <a href="http://www.admonymous.com/feedback">leaving an admonition or admiration for Admonymous itself!</a></p> 
 
 </div>
 
