--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
     <img src="/static/images/Admonymous_logo.png" width="983" height="150" style="margin-left:auto;margin-right:auto;"/>
     
     <div id="signup-bar" class="well">
-      <a href="/login" class="btn nodecorate primary float-right large">Log in with your Google account</a>
+      <a href="/login" target="_blank" class="btn nodecorate primary float-right large">Log in with your Google account</a>
       This website lets you leave anonymous admonition and admiration for your friends and coworkers. 
     </div>
     
@@ -59,13 +59,13 @@
 
       <p>Admonitions are rare in most societies, while unconstructive criticism and insincere flattery are common. Most people recoil from reproving others, since they do not want to risk reactions of anger or hate. Admonitions are beneficial to both giver and recipient, but the inability to deliver them without risking an adverse reaction significantly limits their use.</p>
 
-      <p>Admonymous allows everyone to anonymously admonish and admire their friends and acquaintances. All you need to do in order to let others admonish and admire you is <a href="/login">sign up</a> and publish the admonition link where people can see it: in your email signature, on notes posted in places where you spend a lot of time, on your shirt. By becoming aware of your blind spots, you will be able to address them.</p>
+      <p>Admonymous allows everyone to anonymously admonish and admire their friends and acquaintances. All you need to do in order to let others admonish and admire you is <a href="/login" target="_blank">sign up</a> and publish the admonition link where people can see it: in your email signature, on notes posted in places where you spend a lot of time, on your shirt. By becoming aware of your blind spots, you will be able to address them.</p>
 
       <p>Giving and receiving good admonitions is not easy. There are many good books about constructive criticism, dealing with criticism, and communication in difficult situations. If you want a quick introduction to some basic principles, try our <a href="/crash_course" target="_new">crash course in anonymous admonition and admiration</a>.</p>
     </div>
     
     <div style="text-align:center;padding:0 0 50px 0;">
-      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/login">Log in</a>
+      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/login" target="_blank">Log in</a>
     </div>
     
   </div>
