--- a/templates/topmenu.html
+++ b/templates/topmenu.html
@@ -17,7 +17,7 @@
       <a href="/"><img src="/static/images/Admonymous_logo.png" width="288" height="45"/></a>
     </div>
     <div style="float-left;width:400px;margin:20px 0 0 0">
-      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/login">Log in</a>
+      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/login" target="_blank">Log in</a>
     </div>
   </div>
   {% endif %}
