--- a/templates/user.html
+++ b/templates/user.html
@@ -19,7 +19,7 @@
         {% else %}
         {% if not user %}
          <div id="user-page-welcome">
-           This website lets you leave anonymous admonition and admiration for your friends and coworkers. If you would like a page of your own, <a href="/login" class="nodecorate">log in with your Google account</a>.
+           This website lets you leave anonymous admonition and admiration for your friends and coworkers. If you would like a page of your own, <a href="/login" target="_blank" class="nodecorate">log in with your Google account</a>.
          </div>
          {% endif %}
         Constructively admonish {{ target_user.name }}:
